[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "lumache"
version = "0.1.0"
description = "A simple Python script for Read the Docs documentation."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.sphinx]
project = "Lumache"
author = "Your Name"
version = "0.1.0"
release = "0.1.0"

# Optional: Configure Sphinx extensions for Read the Docs
extensions = [
    "sphinx.ext.autodoc",      # Automatically document your Python code
    "sphinx.ext.viewcode",     # Link to source code
    "sphinx.ext.napoleon",     # Support for Google and NumPy style docstrings
]

# Optional: Configure the theme for the docs
html_theme = "alabaster"

